# minigrep

./: Cargo.toml  README.md
blog/src/: lib.rs  main.rs
closures/src/: main.rs
complex/src/: lib.rs
demo/src/: main.rs
demo2/src/: main.rs
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
gui/src/: lib.rs  main.rs
minigrep/: Cargo.toml  LICENSE.txt
minigrep/src/: lib.rs  main.rs
